Fix CSS for mobile and give warning when on mobile phone Also make CIRCA logo responsive to its screen

--- a/src/app/components/pages/home/home.component.css
+++ b/src/app/components/pages/home/home.component.css
@@ -19,7 +19,7 @@
 
 .logoAbbreviation{
     display: block;
-    font-size: 5em;
+    font-size: 5vw;
     font-weight: 700;
     color: #07607a;
     letter-spacing: 1.28em;
@@ -27,6 +27,6 @@
 
 .logoName{
     display: block;
-    font-size: 1.5em;
+    font-size: 1.5vw;
     color: #07607a;
 }
